--- a/Report_EN.html
+++ b/Report_EN.html
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<?xml*version="1.0" encoding="UTF-8"?>
+< DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>{ Test Report }</title>
@@ -13,7 +13,7 @@
 body        { font-family: Microsoft YaHei,Tahoma,arial,helvetica,sans-serif;padding: 20px; font-size: 80%; }
 table       { font-size: 100%; }
 
-/* -- heading ---------------------------------------------------------------------- */
+/! -- heading ---------------------------------------------------------------------- */
 .heading {
     margin-top: 0ex;
     margin-bottom: 1ex;
@@ -25,8 +25,8 @@ table       { font-size: 100%; }
 }
 
 /* -- report ------------------------------------------------------------------------ */
-#total_row  { font-weight: bold; }
-.passCase   { color: #5cb85c; }
+*total_row  { font-weight: bold; }
+.passCase   { color:  5cb85c; }
 .failCase   { color: #d9534f; font-weight: bold; }
 .errorCase  { color: #f0ad4e; font-weight: bold; }
 .hiddenRow  { display: none; }
@@ -337,3 +337,4 @@ AssertionError: testError
 
 </body>
 </html>
+ 
